# json-schema-to-pydantic-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  bench.py  pyproject.toml
.github/workflows/: bench.yaml  publish.yaml  test.yaml
python/json_schema_to_pydantic_rs/: __init__.py  _builder.py  _builder_core.py  _exceptions.py
src/: builder.rs  constraints.rs  convert.rs  core_schema.rs  error.rs  lib.rs  pydict_to_value.rs  resolver.rs  schema.rs
tests/: test_constraints.py  test_defaults.py  test_handlers.py  test_model_builder.py  test_nested.py  test_openapi_schemas.py  test_real_world.py  test_resolvers.py  test_serialization.py
