[package]
name = "json_schema_to_pydantic_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "json_schema_to_pydantic_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
